fix controls, 4->8 oscs, cut offset

--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,19 @@ h1 {
 
 .minicolors {
   position:fixed !important;
-  top:15px;
-  left:345px;
+  top:17px;
+  left:130px;
 }
 
 .buttons {
-  width:308px;
-  padding-bottom:40px;
+  margin-left:10px;
+  margin-right:30px;
+  padding:3px 10px 10px 10px;
+  width:300px;
+  position:fixed;
+  top:10px;
+  left:10px;
+  z-index: 1;
 }
 .simple-button.pressed {
   background-color: rgb(80, 30, 30);
@@ -56,7 +62,7 @@ h1 {
 }
 
 .oscillator {
-  width:200px;
+  width:270px;
   margin-bottom:10px;
   padding-left:0.3%;
   float:left;
@@ -106,7 +112,7 @@ h1 {
   padding:3px 10px 10px 10px;
   width:300px;
   position:fixed;
-  top:10px;
+  top:50px;
   left:10px;
   z-index: 1;
 }
@@ -190,7 +196,7 @@ h1 {
   margin-right:2%;
   margin-bottom:5px;
   color: #ddd;
-  width: 23%;
+  width: 10.5%;
   height: 27px;
   font-size:16px;
   font-family: 'myriad-pro-light', trebuchet ms, helvetica, sans;
